# EKF_Localizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  README.tex  TAGS  compile_commands.json  included_files.txt  octave-workspace
data/: #covariance_plot.gp#  .#covariance_plot.gp  angleplot.gp  angleplot_odom.gp  compile_script_from_build.sh  covariance_plot.gp  covariance_plot.gp~  data.csv  frameplot.gp  fused_plotter.gp  fused_plotter.gp~  kfplot.gp  octave-workspace  plo.m  plotscript.gp  plotscript_odom.gp  saved_data_working_one.csv  thing_plot.m
real_life_dta/: .~lock.10-rot.csv#  .~lock.ujwol-10rs.csv#  .~lock.ujwol-m.csv#  .~lock.ujwol3.csv#  10-rot-old.csv  10-rot.csv  1_blocking-rot.csv  angleplot_imu.gp  angleplot_odom.gp  angleplot_odom.gp~  another_stupid.m  blocked_0.csv  d1.csv  d10.csv  d11.csv  d12.csv  d14.csv  d15.csv  d16.csv  d17.csv  d18.csv  d2.csv  d3.csv  d4.csv  d5.csv  d6.csv  d7.csv  d8.csv  d9.csv  dd1  dd2  dd3  dd4  dd5  dd6  dd7  dd8  ddd1  ddd2  ddd3  (+20 more)
src/: Distance.hpp  DistanceSensorModel.hpp  DynamicDistanceModel.hpp  FourDistanceSensorsModel.hpp  ImuMeasuremenntModel.hpp  OdomMeasurementModel.hpp  SystemModel.hpp  TFMiniMeasurementModek.hpp  ThreeWheel.hpp  TwoDistanceSensorsMeasurementModel.hpp  angle_or_double.hpp  main.cpp  wheel.hpp~
